# vk4-swain

./: .gitignore  pyproject.toml  skills-lock.json  swain-box
.agents/skills/swain-design/: SKILL.md  frontmatter-contract.yaml
.agents/skills/swain-dispatch/: SKILL.md
.agents/skills/swain-do/: SKILL.md
.agents/skills/swain-doctor/: SKILL.md
.agents/skills/swain-help/: SKILL.md
.agents/skills/swain-init/: SKILL.md
.agents/skills/swain-keys/: SKILL.md
.agents/skills/swain-release/: SKILL.md  changelog-contract.yaml
.agents/skills/swain-retro/: SKILL.md
.agents/skills/swain-roadmap/: SKILL.md
.agents/skills/swain-search/: SKILL.md
.agents/skills/swain-security-check/: SKILL.md
.agents/skills/swain-session/: SKILL.md
.agents/skills/swain-stage/: SKILL.md
.agents/skills/swain-status/: SKILL.md
.agents/skills/swain-sync/: SKILL.md
.agents/skills/swain-update/: SKILL.md
.claude/skills/: swain  swain-doctor  swain-search  swain-security-check  swain-session  swain-stage  swain-status  swain-update
.goose/skills/: swain-design  swain-dispatch  swain-do  swain-help  swain-init  swain-keys  swain-release  swain-retro  swain-roadmap  swain-sync
.tickets/: vs-6s4o.md  vs-8tc5.md  vs-aagr.md  vs-ctlw.md  vs-fgvw.md  vs-m5dr.md  vs-vapx.md
docs/seeds/: vk-cli-seed.md
src/vk/: __init__.py  client.py  config.py  exceptions.py  formatting.py  models.py
tests/: conftest.py  test_client.py
tests/test_adapters/: test_cli.py
tests/test_services/: test_comments.py  test_labels.py  test_projects.py  test_search.py  test_tasks.py
(+198 files in other folders)
