[project]
name = "vk"
version = "0.1.0a1"
description = "Vikunja CLI and MCP server"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "mcp>=1.0",
]

[project.scripts]
vk = "vk.adapters.cli:cli"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
